resolved issue with mobile devices and overlapping text

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video {
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video {
     border:0;
     font:inherit;
     font-size:100%;
@@ -119,9 +119,6 @@ a.two:hover {
 	float: left;
 }
 
-#sidebar {
-	float: right;
-}
 
 #contactDetails {
 	float: right;
@@ -195,105 +192,262 @@ section:last-child {
 	margin-bottom: 3px;
 }
 
-.open {
-  display: -moz-inline-stack;
-  display: inline-block;
-  vertical-align: top;
-  *display: inline;
-  zoom: 1;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  height: 28px;
-  width: 110px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  position: relative;
-  background-color: #f8f8f8;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#fff),to(#dedede));
-  background-image: -moz-linear-gradient(top,#fff,#dedede);
-  background-image: -o-linear-gradient(top,#fff,#dedede);
-  background-image: -ms-linear-gradient(top,#fff,#dedede);
-  background-image: linear-gradient(top,#fff,#dedede);
-  border: #ccc solid 1px;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
+.keySkills {
+	list-style-type: none;
+						
+					  
+				   
+		  
+	-moz-column-count:3;
+	-webkit-column-count:3;
+	column-count:3;
+	margin-bottom: 20px;
+	font-size: 1em;
+			   
+						  
+							 
+					 
+					 
+	color: #444;
+}
+														   
+														 
+														  
+													  
+						 
+						  
+							 
+					 
 
-  color: #444;
-  font-weight: bold;
-  text-shadow: 0 1px 0 rgba(255,255,255,.5);
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  cursor: pointer;
-  max-width: 98%;
-  overflow: hidden;
-  text-decoration: none;
-  margin: 3px;
-}
-.open linkedin {
-    position: absolute;
-    top: 50%;
-    width: 20px;
-    height: 20px;
-    left: 5px;
-    margin-top: -9px;
-    background: transparent url(images/linkedin.png) 0 0 no-repeat;
-}
-.open twitter {
-    position: absolute;
-    top: 50%;
-    width: 20px;
-    height: 16px;
-    left: 5px;
-    margin-top: -8px;
-    background: transparent url(images/twitter.png) 0 0 no-repeat;
-  
-}
-.open github {
-    position: absolute;
-	  
-    top: 50%;
+.keySkills ul li {
+	margin-bottom: 3px;
+											
+							
+						 
+					   
 					
-    width: 25px;
-    height: 25px;
-    left: 2px;
-    margin-top: -12px;
-    background: transparent url(images/github.png) 0 0 no-repeat;
-
-}
-.open blogger {
-    position: absolute;
-    top: 50%;
-    width: 20px;
-    height: 20px;
-    left: 5px;
-    margin-top: -10px;
-    background: transparent url(images/blogger.png) 0 0 no-repeat;
-
-}
-.open span{
-  display: inline-block;
-  *display: inline;
-  zoom: 1;
-  padding: 0 7px 0 31px;
-  font-size: 13px;
-  line-height: 26px;
-}
-.open:focus, .open:hover, .open:active {
-  border-color: #bbb;
-  background-color: #f8f8f8;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#f8f8f8),to(#d9d9d9));
-  background-image: -moz-linear-gradient(top,#f8f8f8,#d9d9d9);
-  background-image: -o-linear-gradient(top,#f8f8f8,#d9d9d9);
-  background-image: -ms-linear-gradient(top,#f8f8f8,#d9d9d9);
-  background-image: linear-gradient(top,#f8f8f8,#d9d9d9);
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
+				  
+				 
+				   
+						
+			  
 }
 
+					   
+			 
+@media all and (min-width: 602px) and (max-width: 800px) {
+	#headshot {
+		display: none;
+	}
+	
+	.keySkills {
+	-moz-column-count:2;
+	-webkit-column-count:2;
+	column-count:2;
+	}
+}
+
+@media all and (max-width: 601px) {
+	#cv {
+		width: 95%;
+		margin: 10px auto;
+		min-width: 280px;
+	}
+	
+	#headshot {
+		display: none;
+	}
+	
+	#name, #contactDetails {
+		float: none;
+		width: 100%;
+		text-align: center;
+	}
+	
+	.sectionTitle, .sectionContent {
+		float: none;
+		width: 100%;
+	}
+	
+	.sectionTitle {
+		margin-left: -2px;
+		font-size: 1.25em;
+	}
+	
+	.keySkills {
+		-moz-column-count:2;
+		-webkit-column-count:2;
+		column-count:2;
+	}
+}
+			  
+					   
+   
+			 
+	 
+				
+				 
+			  
+					  
+																 
+
+@media all and (max-width: 480px) {
+	.mainDetails {
+		padding: 15px 15px;
+	}
+	
+	section {
+		padding: 15px 0 0;
+	}
+	
+	#mainArea {
+		padding: 0 25px;
+	}
+
+	
+	.keySkills {
+	-moz-column-count:1;
+	-webkit-column-count:1;
+	column-count:1;
+	}
+	
+	#name h1 {
+		line-height: .8em;
+		margin-bottom: 4px;
+	}
+}
+			   
+					   
+			 
+				
+				 
+			  
+					  
+																  
+
+@media print {
+    #cv {
+        width: 100%;
+    }
+}
+
+@-webkit-keyframes reset {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+@-webkit-keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@-moz-keyframes reset {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+@-moz-keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes reset {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+.instaFade {
+    -webkit-animation-name: reset, fade-in;
+    -webkit-animation-duration: 1.5s;
+    -webkit-animation-timing-function: ease-in;
+	
+	-moz-animation-name: reset, fade-in;
+    -moz-animation-duration: 1.5s;
+    -moz-animation-timing-function: ease-in;
+	
+	animation-name: reset, fade-in;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in;
+}
+
+.quickFade {
+    -webkit-animation-name: reset, fade-in;
+    -webkit-animation-duration: 2.5s;
+    -webkit-animation-timing-function: ease-in;
+	
+	-moz-animation-name: reset, fade-in;
+    -moz-animation-duration: 2.5s;
+    -moz-animation-timing-function: ease-in;
+	
+	animation-name: reset, fade-in;
+    animation-duration: 2.5s;
+    animation-timing-function: ease-in;
+}
+ 
+.delayOne {
+	-webkit-animation-delay: 0, .5s;
+	-moz-animation-delay: 0, .5s;
+	animation-delay: 0, .5s;
+}
+
+.delayTwo {
+	-webkit-animation-delay: 0, 1s;
+	-moz-animation-delay: 0, 1s;
+	animation-delay: 0, 1s;
+}
+
+.delayThree {
+	-webkit-animation-delay: 0, 1.5s;
+	-moz-animation-delay: 0, 1.5s;
+	animation-delay: 0, 1.5s;
+}
+
+.delayFour {
+	-webkit-animation-delay: 0, 2s;
+	-moz-animation-delay: 0, 2s;
+	animation-delay: 0, 2s;
+}
+
+.delayFive {
+	-webkit-animation-delay: 0, 2.5s;
+	-moz-animation-delay: 0, 2.5s;
+	animation-delay: 0, 2.5s;
+}
